--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                         <a href="#">Comunity</a>            
                 </ul>
             </nav>
+            <section class="header-title">
+                <span class="header-subtitle-text">featured class</span>
+                <h1 class="header-title-text">The role of user interface designer</h1>
+                <a href="#" class="join">
+                    <img src="/img/icons/arrow.svg">
+                    <span class="join-text">join <br> The Class</span>
+                </a>
+            </section>
         </div>
     </header>
 </body>
